--- a/backend_api/Dockerfile
+++ b/backend_api/Dockerfile
@@ -1,12 +1,12 @@
 FROM python:3
 
-COPY /django_api/requirements.txt /api/requirements.txt
+COPY /django_project/requirements.txt /api/requirements.txt
 
 WORKDIR /api
 
 RUN pip3 install -r requirements.txt
 
-COPY /django_api /api
+COPY /django_project /api
 
 RUN chmod +x entrypoint.sh
 
