--- a/backend_api/django_proyect/Dockerfile
+++ b/backend_api/django_proyect/Dockerfile
@@ -1,12 +1,12 @@
 FROM python:3
 
-COPY /backend_api/requirements.txt /api/requirements.txt
+COPY /backend_api/django_proyect/requirements.txt /api/requirements.txt
 
 WORKDIR /api
 
 RUN pip3 install -r requirements.txt
 
-COPY /backend_api /api
+COPY /backend_api/django_proyect /api
 
 RUN chmod +x entrypoint.sh
 
