--- a/backend_api/django_proyect/requirements.txt
+++ b/backend_api/django_proyect/requirements.txt
@@ -3,4 +3,5 @@ Django==4.2.4
 djangorestframework==3.14.0
 kafka==1.3.5
 pyotp==2.9.0
-rest_framework_simplejwt==0.0.2
+djangorestframework-simplejwt
+kafka-python
