--- a/ecommerce/backend_orders/Dockerfile
+++ b/ecommerce/backend_orders/Dockerfile
@@ -1,11 +1,11 @@
 FROM python:3
 
-COPY /backend_orders/requirements.txt /backend_orders/requirements.txt
+COPY /ecommerce/backend_orders/requirements.txt /backend_orders/requirements.txt
 
 WORKDIR /backend_orders
 
 RUN pip3 install -r requirements.txt
 
-COPY /backend_orders /backend_orders
+COPY /ecommerce/backend_orders /backend_orders
 
 CMD ["python", "kafka_consume.py" ]
