--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,8 +12,7 @@ services:
         volumes:
             - ./data/zookeeper/data:/data
             - ./data/zookeeper/datalog:/datalog
-        depends_on:
-            - backend_api
+
     
 
     kafka1:
@@ -32,50 +31,12 @@ services:
             - ./data/kafka1/data:/var/lib/kafka/data
         depends_on:
             - zookeeper
-            - backend_api
     
 
 
 
 
 
-    # kafka:
-    #     ports:
-    #     - '50001:9092'
-    #     - '50002:9093'
-    #     depends_on:
-    #     - zookeeper
-    #     environment:
-    #         KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2181'
-    #         KAFKA_LISTENERS: 'INTERNAL://:9092'
-    #         KAFKA_ADVERTISED_LISTENERS: 'INTERNAL://:9092'
-    #         KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: 'INTERNAL:PLAINTEXT'
-    #         KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
-    #         KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: '1'
-    #         KAFKA_CREATE_TOPICS: 'example-topic:1:1'
-    #         KAFKA_ADVERTISED_HOST_NAME: host.docker.internal # change to 172.17.0.1 if running on Ubuntu
-    #     image: 'wurstmeister/kafka:2.13-2.8.1'
-    #     volumes:
-    #     - '/var/run/docker.sock:/var/run/docker.sock'
-    # publisher:
-    #     depends_on:
-    #     - kafka
-    #     environment:
-    #         TOPIC: example-topic
-    #         ENVIRONMENT: local
-    #         INTERNAL_KAFKA_ADDR: 'kafka:9092'
-    #     build:
-    #         context: ./publisher
-    # subscriber:
-    #     depends_on:
-    #     - kafka
-    #     environment:
-    #         TOPIC: example-topic
-    #         ENVIRONMENT: local
-    #         INTERNAL_KAFKA_ADDR: 'kafka:9092'
-    #     build:
-    #         context: ./subscriber
-    # volumes: {}
 
 
 
@@ -88,21 +49,24 @@ services:
             dockerfile: ./ecommerce/backend_orders/Dockerfile
         ports:
             - "8001:8001"
-            - "9091:9091"
+        depends_on:
+            - zookeeper
+            - kafka1
     
     backend_api:
         build:
             dockerfile: ./ecommerce/backend_api/Dockerfile
         ports:
             - "8000:8000"
-            - "9092:9092"
-        # command: ["python3 manage.py makemigrations", "python3 manage.py runserver 0.0.0.0:8000"]
         command: "python3 manage.py runserver 0.0.0.0:8000"
+        depends_on:
+            - zookeeper
+            - kafka1
     
 
 
 
 
-    personal_website:
-        build:
-            dockerfile: ./personal_website/Dockerfile
+    # personal_website:
+    #     build:
+    #         dockerfile: ./personal_website/Dockerfile
