--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -42,21 +42,6 @@ services:
             interval: 5s
             timeout: 10s
             retries: 10
-    
-
-
-    
-
-
-
-
-
-
-
-
-
-
-
 
     backend_analytics:
         restart: always
@@ -67,6 +52,7 @@ services:
         depends_on:
             kafka1:
                 condition: service_healthy
+        
     
     backend_api:
         restart: always
@@ -80,17 +66,25 @@ services:
                 condition: service_healthy
         volumes:
             - ./ecommerce/backend_api:/api
-    
-    db:
+
+    products_db:
         image: postgres
         restart: always
         environment:
             POSTGRES_PASSWORD: example
+            POSTGRES_USER: username
+            analytics_db_url: 'postgresql://{username}:{password}@{host}'
         healthcheck:
             test: [“CMD-SHELL”, “pg_isready”]
             interval: 1s
             timeout: 5s
             retries: 10
+        volumes:
+            - ./ecommerce/backend_analytics/:/var/lib/analytics_db/data
+        env_file:
+            - .env # The name of your environment file (the one at the repository root)
+
+            
  
 
     
