--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -53,14 +53,14 @@ services:
     #         timeout: 10s
     #         retries: 10
 
-    backend_analytics:
-        restart: always
-        build:
-            dockerfile: ./ecommerce/backend_analytics/Dockerfile
-        ports:
-            - "8001:8001"
-        env_file:
-            - .env
+    # backend_analytics:
+    #     restart: always
+    #     build:
+    #         dockerfile: ./ecommerce/backend_analytics/Dockerfile
+    #     ports:
+    #         - "8001:8001"
+    #     env_file:
+    #         - .env
         # depends_on:
         #     analytics_database:
         #         condition: service_healthy
@@ -84,8 +84,16 @@ services:
     analytics_database:
         image: bitnami/postgresql:15.4.0-debian-11-r5
         restart: always
-        ports:
-            - '5432:5432'
+        # ports:
+        #     - '5432:5432'
+    #     networks:
+    #         - turreta_network
+        env_file:
+            - .env
+        volumes:
+            - ./data/backend_analytics:/var/lib/analytics_db/data
+        # command: /bin/bash -c "until pg_isready -U ${POSTGRES_USER} -p 5432; do sleep 1; done; psql -U ${POSTGRES_USER} -c 'CREATE DATABASE bank;'"
+
         # environment:
             # POSTGRES_USER: user123 # The PostgreSQL user (useful to connect to the database)
             # POSTGRES_PASSWORD: pass123 # The PostgreSQL password (useful to connect to the database)
@@ -97,21 +105,34 @@ services:
         #     interval: 1s
         #     timeout: 5s
         #     retries: 10
-        volumes:
-            - ./data/backend_analytics:/var/lib/analytics_db/data
-        env_file:
-            - .env # The name of your environment file (the one at the repository root)
-        command: /bin/bash -c "until pg_isready -U ${POSTGRES_USER} -p 5432; do sleep 1; done; psql -U ${POSTGRES_USER} -c 'CREATE DATABASE bank;'"
 
             
- 
+    pgadmin:
+        image: dpage/pgadmin4:4.23
+        environment:
+            PGADMIN_DEFAULT_EMAIL: admin@pgadmin.com
+            PGADMIN_DEFAULT_PASSWORD: password
+            PGADMIN_LISTEN_PORT: 80
+        ports:
+            - 15432:80
+        volumes:
+            - pgadmin:/var/lib/pgadmin
+        depends_on:
+            - analytics_database
+
+#         networks:
+#             - turreta_network
 
     
-
+# networks:
+#   turreta_network:
+#     driver: bridge
 # volumes:
 #   analytics_database:
 #     driver: local
-
+volumes:
+    analytics_database:
+    pgadmin:
 
     # personal_website:
     #     build:
