--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -82,24 +82,28 @@ services:
     #         - ./ecommerce/backend_api:/api
 
     analytics_database:
-        image: bitnami/postgresql:15.4.0-debian-11-r5
+        # image: bitnami/postgresql:15.4.0-debian-11-r5
+        # image: postgres:15-alpine
+        build:
+            dockerfile: ./ecommerce/database_analytics/Dockerfile
         restart: always
-        # ports:
-        #     - '5432:5432'
-    #     networks:
-    #         - turreta_network
-        env_file:
-            - .env
+        ports:
+            - '5432:5432'
+        networks:
+            - turreta_network
+        # env_file:
+        #     - .env
         volumes:
             - ./data/backend_analytics:/var/lib/analytics_db/data
         # command: /bin/bash -c "until pg_isready -U ${POSTGRES_USER} -p 5432; do sleep 1; done; psql -U ${POSTGRES_USER} -c 'CREATE DATABASE bank;'"
 
-        # environment:
-            # POSTGRES_USER: user123 # The PostgreSQL user (useful to connect to the database)
-            # POSTGRES_PASSWORD: pass123 # The PostgreSQL password (useful to connect to the database)
-            # POSTGRES_DB: default_database # The PostgreSQL default database (automatically created at first launch)
+        environment:
+            POSTGRES_USER: postgres # The PostgreSQL user (useful to connect to the database)
+            POSTGRES_PASSWORD: postgres # The PostgreSQL password (useful to connect to the database)
+            POSTGRES_DB: default_database # The PostgreSQL default database (automatically created at first launch)
+            # DATABASE_URL: postgres://{analytics_database_username}:{analytics_database_password}@{analytics_database_host}/somedb
             # analytics_db_url: 'postgresql://{username}:{password}@{host}'
-            # DATABASE_URL:postgres://{username}:{password}@{host}/somedb
+            
         # healthcheck:
         #     test: [“CMD-SHELL”, “pg_isready”]
         #     interval: 1s
@@ -108,25 +112,26 @@ services:
 
             
     pgadmin:
-        image: dpage/pgadmin4:4.23
+        image: dpage/pgadmin4
         environment:
-            PGADMIN_DEFAULT_EMAIL: admin@pgadmin.com
-            PGADMIN_DEFAULT_PASSWORD: password
+            PGADMIN_DEFAULT_EMAIL: pgadmin4@pgadmin.org
+            PGADMIN_DEFAULT_PASSWORD: admin
             PGADMIN_LISTEN_PORT: 80
+            PGADMIN_CONFIG_SERVER_MODE: 'False'
         ports:
-            - 15432:80
+            - "5050:80"
         volumes:
             - pgadmin:/var/lib/pgadmin
         depends_on:
             - analytics_database
-
-#         networks:
-#             - turreta_network
+        networks:
+            - turreta_network
+        restart: unless-stopped
 
     
-# networks:
-#   turreta_network:
-#     driver: bridge
+networks:
+  turreta_network:
+    driver: bridge
 # volumes:
 #   analytics_database:
 #     driver: local
