--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -120,7 +120,7 @@ services:
         ports:
             - "5050:80"
         volumes:
-            - pgadmin:/var/lib/pgadmin
+            - ./data/pgadmin4:/var/lib/pgadmin4/data
         depends_on:
             - analytics_database
         networks:
