--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -81,11 +81,10 @@ services:
     #     volumes:
     #         - ./ecommerce/backend_api:/api
 
+    # Databases
     analytics_database:
-        # image: bitnami/postgresql:15.4.0-debian-11-r5
-        # image: postgres:15-alpine
         build:
-            dockerfile: ./ecommerce/database_analytics/Dockerfile
+            dockerfile: ./ecommerce/analytics_database/Dockerfile
         restart: always
         ports:
             - '5432:5432'
@@ -94,20 +93,104 @@ services:
         env_file:
             - .env
         volumes:
-            - ./data/backend_analytics:/var/lib/analytics_db/data
-
+            - ./data/analytics_database:/var/lib/analytics_database/data
         environment:
             POSTGRES_USER: ${ANALYTICS_DATABASE_POSTGRES_USER}
             POSTGRES_PASSWORD: ${ANALYTICS_DATABASE_POSTGRES_PASSWORD}
             POSTGRES_DB: ${ANALYTICS_DATABASE_POSTGRES_DATABASE_NAME}
-            # POSTGRES_HOST: ${ANALYTICS_DATABASE_POSTGRES_HOST}
+        healthcheck:
+            test: [“CMD-SHELL”, “pg_isready”]
+            interval: 1s
+            timeout: 5s
+            retries: 10
+    
+    users_database:
+        build:
+            dockerfile: ./ecommerce/users_database/Dockerfile
+        restart: always
+        ports:
+            - '5433:5432'
+        networks:
+            - turreta_network
+        env_file:
+            - .env
+        volumes:
+            - ./data/users_database:/var/lib/users_database/data
+        environment:
+            POSTGRES_USER: ${USERS_DATABASE_POSTGRES_USER}
+            POSTGRES_PASSWORD: ${USERS_DATABASE_POSTGRES_PASSWORD}
+            POSTGRES_DB: ${USERS_DATABASE_POSTGRES_DATABASE_NAME}
+        healthcheck:
+            test: [“CMD-SHELL”, “pg_isready”]
+            interval: 1s
+            timeout: 5s
+            retries: 10
+    
+    products_database:
+        build:
+            dockerfile: ./ecommerce/products_database/Dockerfile
+        restart: always
+        ports:
+            - '5434:5432'
+        networks:
+            - turreta_network
+        env_file:
+            - .env
+        volumes:
+            - ./data/products_database:/var/lib/products_database/data
+        environment:
+            POSTGRES_USER: ${PRODUCTS_DATABASE_POSTGRES_USER}
+            POSTGRES_PASSWORD: ${PRODUCTS_DATABASE_POSTGRES_PASSWORD}
+            POSTGRES_DB: ${PRODUCTS_DATABASE_POSTGRES_DATABASE_NAME}
+        healthcheck:
+            test: [“CMD-SHELL”, “pg_isready”]
+            interval: 1s
+            timeout: 5s
+            retries: 10
+    
+    marketing_database:
+        build:
+            dockerfile: ./ecommerce/marketing_database/Dockerfile
+        restart: always
+        ports:
+            - '5434:5432'
+        networks:
+            - turreta_network
+        env_file:
+            - .env
+        volumes:
+            - ./data/marketing_database:/var/lib/marketing_database/data
+        environment:
+            POSTGRES_USER: ${MARKETING_DATABASE_POSTGRES_USER}
+            POSTGRES_PASSWORD: ${MARKETING_DATABASE_POSTGRES_PASSWORD}
+            POSTGRES_DB: ${MARKETING_DATABASE_POSTGRES_DATABASE_NAME}
+        healthcheck:
+            test: [“CMD-SHELL”, “pg_isready”]
+            interval: 1s
+            timeout: 5s
+            retries: 10
 
-            
-        # healthcheck:
-        #     test: [“CMD-SHELL”, “pg_isready”]
-        #     interval: 1s
-        #     timeout: 5s
-        #     retries: 10
+    orders_database:
+        build:
+            dockerfile: ./ecommerce/orders_database/Dockerfile
+        restart: always
+        ports:
+            - '5435:5432'
+        networks:
+            - turreta_network
+        env_file:
+            - .env
+        volumes:
+            - ./data/orders_database:/var/lib/orders_database/data
+        environment:
+            POSTGRES_USER: ${MARKETING_DATABASE_POSTGRES_USER}
+            POSTGRES_PASSWORD: ${MARKETING_DATABASE_POSTGRES_PASSWORD}
+            POSTGRES_DB: ${MARKETING_DATABASE_POSTGRES_DATABASE_NAME}
+        healthcheck:
+            test: [“CMD-SHELL”, “pg_isready”]
+            interval: 1s
+            timeout: 5s
+            retries: 10
 
             
     pgadmin:
@@ -131,13 +214,11 @@ services:
 networks:
   turreta_network:
     driver: bridge
-# volumes:
-#   analytics_database:
-#     driver: local
+
 volumes:
     analytics_database:
+    marketing_database:
+    orders_database:
+    products_database:
+    users_database:
     pgadmin:
-
-    # personal_website:
-    #     build:
-    #         dockerfile: ./personal_website/Dockerfile
