--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -89,7 +89,7 @@ services:
         ports:
             - '5432:5432'
         networks:
-            - turreta_network
+            - database_network
         env_file:
             - .env
         volumes:
@@ -111,7 +111,7 @@ services:
         ports:
             - '5433:5432'
         networks:
-            - turreta_network
+            - database_network
         env_file:
             - .env
         volumes:
@@ -133,7 +133,7 @@ services:
         ports:
             - '5434:5432'
         networks:
-            - turreta_network
+            - database_network
         env_file:
             - .env
         volumes:
@@ -153,9 +153,9 @@ services:
             dockerfile: ./ecommerce/marketing_database/Dockerfile
         restart: always
         ports:
-            - '5434:5432'
+            - '5435:5432'
         networks:
-            - turreta_network
+            - database_network
         env_file:
             - .env
         volumes:
@@ -175,9 +175,9 @@ services:
             dockerfile: ./ecommerce/orders_database/Dockerfile
         restart: always
         ports:
-            - '5435:5432'
+            - '5436:5432'
         networks:
-            - turreta_network
+            - database_network
         env_file:
             - .env
         volumes:
@@ -196,21 +196,21 @@ services:
     pgadmin:
         image: dpage/pgadmin4
         environment:
-            PGADMIN_DEFAULT_EMAIL: pgadmin4@pgadmin.org
-            PGADMIN_DEFAULT_PASSWORD: admin
-            PGADMIN_LISTEN_PORT: 80
-            PGADMIN_CONFIG_SERVER_MODE: 'False'
+            PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}
+            PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
+            PGADMIN_LISTEN_PORT: ${PGADMIN_LISTEN_PORT}
+            PGADMIN_CONFIG_SERVER_MODE: ${PGADMIN_CONFIG_SERVER_MODE}
         ports:
-            - "5050:80"
+            - "5050:${PGADMIN_LISTEN_PORT}"
         volumes:
             - ./data/pgadmin4:/var/lib/pgadmin4/data
         networks:
-            - turreta_network
+            - database_network
         restart: unless-stopped
 
     
 networks:
-  turreta_network:
+  database_network:
     driver: bridge
 
 volumes:
