kafdrop to monitor problem

--- a/ecommerce/backend_analytics/Dockerfile
+++ b/ecommerce/backend_analytics/Dockerfile
@@ -10,4 +10,4 @@ COPY /ecommerce/backend_analytics /backend_analytics
 
 COPY .env /backend_analytics/
 
-CMD ["python", "kafka_consume.py" ]
+CMD ["python", "-u", "kafka_consume.py" ]
