--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,10 @@
 version: "3.8"
+
+x-zoo: &zoo "kafka-1:2888:3888;kafka-2:2888:3888;kafka-3:2888:3888"
+x-kafkaZookeepers: &kafkaZookeepers "kafka-1:2181,kafka-2:2181,kafka-3:2181"
+x-kafkaBrokers: &kafkaBrokers "kafka-1:9092"
+
+
 services:
 
 
@@ -22,40 +28,121 @@ services:
     #         retries: 3
     #     networks: 
     #         - database_network
-    zookeeper:
-        image: zookeeper:3.4.9
-        hostname: zookeeper
-        ports:
-            - "2181:2181"
-        environment:
-            ZOO_MY_ID: 1
-            ZOO_PORT: 2181
-            ZOO_SERVERS: server.1=zookeeper:2888:3888
-        healthcheck:
-            test: ["CMD-SHELL", "echo ruok | nc -z zookeeper 2181"]
-            interval: 5s
-            timeout: 10s
-            retries: 3
-        volumes:
-            - ./data/zookeeper/data:/data
-            - ./data/zookeeper/datalog:/datalog
+    # zookeeper:
+    #     image: confluentinc/cp-zookeeper:6.2.1
+    #     container_name: zookeeper
+    #     ports:
+    #         - "2181:2181"
+    #     extra_hosts:
+    #         - "kafka1:192.168.1.11"
+    #     environment:
+    #         ZOOKEEPER_SERVER_ID: 1
+    #         ZOOKEEPER_QUORUM_LISTEN_ON_ALL_IPS: 'true'
+    #         ZOOKEEPER_CLIENT_PORT: 2181
+    #         ZOOKEEPER_PEER_PORT: 2888
+    #         ZOOKEEPER_LEADER_PORT: 3888
+    #         ZOOKEEPER_TICK_TIME: 2000
+    #         ZOOKEEPER_INIT_LIMIT: 5
+    #         ZOOKEEPER_SYNC_LIMIT: 2
+    #         ZOOKEEPER_SERVERS: server.1=zookeeper:2888:3888
+    #     volumes:
+    #         - ./kafka-data/zookeeper:/var/lib/zookeeper/data
+    #         - ./kafka-data/zookeeper-logs:/var/lib/zookeeper/log
+    #     healthcheck:
+    #         test: ["CMD-SHELL", "echo ruok | nc -w 2 zookeeper 2181"]
+    #         interval: 5s
+    #         timeout: 10s
+    #         retries: 3
+    #     networks:
+    #         - mynet
+    
+    # kafka1:
+    #     image: confluentinc/cp-kafka:6.2.1
+    #     hostname: kafka1
+    #     container_name: kafka1
+    #     depends_on:
+    #         zookeeper:
+    #             condition: service_healthy
+    #     ports:
+    #         - "9092:9092"
+    #     extra_hosts:
+    #         - "kafka1:192.168.1.11"
+    #     environment:
+    #         KAFKA_BROKER_ID: 1
+    #         KAFKA_LISTENERS: OUTSIDE://0.0.0.0:9092
+    #         KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: OUTSIDE:PLAINTEXT
+    #         KAFKA_ADVERTISED_LISTENERS: OUTSIDE://192.168.1.11:9092
+    #         KAFKA_INTER_BROKER_LISTENER_NAME: OUTSIDE
+    #         KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+    #         KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+    #         KAFKA_LOG_MESSAGE_TIMESTAMP_TYPE: 'LogAppendTime'
+    #         KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
+    #         KAFKA_CONNECTIONS_MAX_IDLE_MS: 31536000000 # 1 year
+    #     volumes:
+    #         - ./kafka-data/kafka:/var/lib/kafka/data
 
-    kafka1:
-        image: confluentinc/cp-kafka:5.3.0
-        hostname: kafka1
-        ports:
-            - "9091:9091"
+    #     networks:
+    #         - mynet
+    # zookeeper:
+    #     container_name: zookeeper
+    #     image: confluentinc/cp-zookeeper:6.2.1
+    #     hostname: zookeeper
+    #     restart: always
+    #     environment:
+    #         ZOOKEEPER_SERVER_ID: 1
+    #         ZOOKEEPER_CLIENT_PORT: 2181
+    #         ZOOKEEPER_TICK_TIME: 2000
+    #         ZOOKEEPER_INIT_LIMIT: 5
+    #         ZOOKEEPER_SYNC_LIMIT: 2
+    #     ports:
+    #         - 2181:2181
+
+    # kafka:
+    #     container_name: kafka
+    #     image: confluentinc/cp-kafka:6.2.1
+    #     depends_on:
+    #         - zookeeper
+    #     restart: always
+    #     environment:
+    #         KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+    #         KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: LISTENER_DOCKER_INTERNAL:PLAINTEXT,LISTENER_DOCKER_EXTERNAL:PLAINTEXT
+    #         KAFKA_INTER_BROKER_LISTENER_NAME: LISTENER_DOCKER_INTERNAL
+    #         KAFKA_ADVERTISED_LISTENERS: LISTENER_DOCKER_INTERNAL://localhost:19092,LISTENER_DOCKER_EXTERNAL://${DOCKER_HOST_IP:-127.0.0.1}:9092
+    #         KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+    #         KAFKA_LISTENERS: LISTENER_DOCKER_INTERNAL://:19092,LISTENER_DOCKER_EXTERNAL://kafka1:9092
+    #         KAFKA_BROKER_ID: 1
+
+
+    #     ports:
+    #         - 9092:9092
+    zookeeper:
+        image: confluentinc/cp-zookeeper:6.2.1
         environment:
-            KAFKA_ADVERTISED_LISTENERS: LISTENER_DOCKER_INTERNAL://kafka1:19091,LISTENER_DOCKER_EXTERNAL://${DOCKER_HOST_IP:-127.0.0.1}:9091
-            KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: LISTENER_DOCKER_INTERNAL:PLAINTEXT,LISTENER_DOCKER_EXTERNAL:PLAINTEXT
-            KAFKA_INTER_BROKER_LISTENER_NAME: LISTENER_DOCKER_INTERNAL
-            KAFKA_ZOOKEEPER_CONNECT: "zookeeper:2181"
-            KAFKA_BROKER_ID: 1
+            ZOOKEEPER_CLIENT_PORT: 2181
+            ZOOKEEPER_TICK_TIME: 2000
+        ports:
+            - 2181:2181
         volumes:
-            - ./data/kafka1/data:/var/lib/kafka/data
+            - ./kafka-data/zookeeper:/var/lib/zookeeper/data
+            - ./kafka-data/zookeeper-logs:/var/lib/zookeeper/log
+    kafka:
+        image: confluentinc/cp-kafka:6.2.1
         depends_on:
-            zookeeper:
-                condition: service_healthy
+            - zookeeper
+        ports:
+            - 9092:9092
+            - 29092:29092
+        environment:
+            KAFKA_BROKER_ID: 1
+            KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+            KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092,PLAINTEXT_HOST://localhost:29092
+            KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+            KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+            KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+        volumes:
+            - ./kafka-data/kafka:/var/lib/kafka/data
+        networks:
+            - mynet
     
     kafdrop:
         image: obsidiandynamics/kafdrop
@@ -63,9 +150,101 @@ services:
         ports:
             - "9000:9000"
         environment:
-            KAFKA_BROKERCONNECT: "kafka1:19091"
-        depends_on:
-            - kafka1
+            KAFKA_BROKERCONNECT: "kafka:9092"
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    # kafka1:
+    #     image: confluentinc/cp-kafka:6.0.14
+    #     # image: wurstmeister/kafka
+    #     # image: confluentinc/cp-kafka:5.3.0
+    #     # docker pull confluentinc/cp-kafka
+    #     hostname: kafka1
+        
+    #     ports:
+    #         - "9092:9092"
+    #     environment:
+    #         KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+    #         KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: LISTENER_DOCKER_INTERNAL:PLAINTEXT,LISTENER_DOCKER_EXTERNAL:PLAINTEXT
+    #         KAFKA_INTER_BROKER_LISTENER_NAME: LISTENER_DOCKER_INTERNAL
+    #         KAFKA_ADVERTISED_LISTENERS: LISTENER_DOCKER_INTERNAL://kafka1:19092,LISTENER_DOCKER_EXTERNAL://${DOCKER_HOST_IP:-127.0.0.1}:9092
+    #         KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+    #         KAFKA_LISTENERS: LISTENER_DOCKER_INTERNAL
+    #         KAFKA_BROKER_ID: 1
+    #         KAFKA_ADVERTISED_HOST_NAME: localhost
+    #     volumes:
+    #         - ./data/kafka1/data:/var/lib/kafka/data
+    #     depends_on:
+    #         - zookeeper
+                # condition: service_healthy
+        # healthcheck:
+            # test: nc -z localhost 9092 || exit -1
+            # start_period: 15s
+            # interval: 5s
+            # timeout: 10s
+            # retries: 10
+
+
+
+
+
+
+
+
+
+    # zookeeper:
+    #     image: confluentinc/cp-zookeeper:latest
+    #     environment:
+    #         ZOOKEEPER_CLIENT_PORT: 2181
+    #         ZOOKEEPER_TICK_TIME: 2000
+    #     ports:
+    #         - 22181:2181
+    
+    # kafka:
+    #     image: confluentinc/cp-kafka:latest
+    #     depends_on:
+    #         - zookeeper
+    #     ports:
+    #         - 29092:29092
+    #     environment:
+    #         KAFKA_BROKER_ID: 1
+    #         KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+    #         KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092,PLAINTEXT_HOST://localhost:29092
+    #         KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+    #         KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+    #         KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+
+
+
+
+
+
+
+
+
+
+    
+
+        # depends_on:
+        #     kafka1:
+        #         condition: service_healthy
 
 
     # backends
@@ -83,8 +262,12 @@ services:
             POSTGRES_DB: ${DATABASE_ANALYTICS_POSTGRES_DATABASE_NAME}
             POSTGRES_HOST: database_analytics
             POSTGRES_PORT: ${POSTGRES_PORT}
+            KAFKA_BROKERCONNECT: "kafka:9092"
         networks:
-            - database_network
+            - mynet
+        # depends_on:
+        #     kafka1:
+        #         condition: service_healthy
 
     backend_api:
         restart: always
@@ -95,6 +278,11 @@ services:
         command: "python3 manage.py runserver 0.0.0.0:8000"
         volumes:
             - ./ecommerce/backend_api:/api
+        networks:
+            - mynet
+        environment:
+            KAFKA_BROKERCONNECT: "kafka:9092"
+
 
 
     # Databases
@@ -229,13 +417,15 @@ services:
 networks:
     database_network:
         driver: bridge
+    mynet:
+        driver: bridge
 
 volumes:
-    zookeeper:
-    kafka1:
-    database_analytics:
-    database_marketing:
-    database_orders:
-    database_products:
-    database_users:
-    pgadmin:
+    zookeeper: {}
+    kafka1: {}
+    database_analytics: {}
+    database_marketing: {}
+    database_orders: {}
+    database_products: {}
+    database_users: {}
+    pgadmin: {}
