--- a/ecommerce/backend_analytics/Dockerfile
+++ b/ecommerce/backend_analytics/Dockerfile
@@ -10,4 +10,6 @@ COPY /ecommerce/backend_analytics /backend_analytics
 
 COPY .env /backend_analytics/
 
+RUN python create_db.py
+
 CMD ["python", "-u", "kafka_consume.py" ]
