create_db not working

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -64,29 +64,7 @@ services:
         environment:
             KAFKA_BROKERCONNECT: "kafka:9092"
 
-    backend_analytics:
-        restart: always
-        build:
-            dockerfile: ./ecommerce/backend_analytics/Dockerfile
-            args:
-                POSTGRES_USER: ${DATABASE_ANALYTICS_POSTGRES_USER}
-                POSTGRES_PASSWORD: ${DATABASE_ANALYTICS_POSTGRES_PASSWORD}
-                POSTGRES_DB: ${DATABASE_ANALYTICS_POSTGRES_DATABASE_NAME}
-                POSTGRES_HOST: ${DATABASE_ANALYTICS_POSTGRES_HOST}
-        ports:
-            - "8001:8001"
-        env_file:
-            - .env
-        environment:
-            POSTGRES_USER: ${DATABASE_ANALYTICS_POSTGRES_USER}
-            POSTGRES_PASSWORD: ${DATABASE_ANALYTICS_POSTGRES_PASSWORD}
-            POSTGRES_DB: ${DATABASE_ANALYTICS_POSTGRES_DATABASE_NAME}
-            POSTGRES_HOST: database_analytics
-            POSTGRES_PORT: ${POSTGRES_PORT}
-            KAFKA_BROKERCONNECT: "kafka:9092"
-        networks:
-            - brokers_network
-            - database_analytics_network
+    
 
 
 
@@ -109,11 +87,41 @@ services:
             POSTGRES_PASSWORD: ${DATABASE_ANALYTICS_POSTGRES_PASSWORD}
             POSTGRES_DB: ${DATABASE_ANALYTICS_POSTGRES_DATABASE_NAME}
         healthcheck:
-            test: [“CMD-SHELL”, “pg_isready”]
-            interval: 1s
-            timeout: 5s
-            retries: 10
-    
+            test: ["CMD-SHELL", "sh -c 'pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}'"]
+            interval: 10s
+            timeout: 3s
+            retries: 3
+
+
+
+
+    backend_analytics:
+        restart: on-failure:10
+        build:
+            dockerfile: ./ecommerce/backend_analytics/Dockerfile
+            args:
+                POSTGRES_USER: ${DATABASE_ANALYTICS_POSTGRES_USER}
+                POSTGRES_PASSWORD: ${DATABASE_ANALYTICS_POSTGRES_PASSWORD}
+                POSTGRES_DB: ${DATABASE_ANALYTICS_POSTGRES_DATABASE_NAME}
+                POSTGRES_HOST: ${DATABASE_ANALYTICS_POSTGRES_HOST}
+        ports:
+            - "8001:8001"
+        env_file:
+            - .env
+        environment:
+            POSTGRES_USER: ${DATABASE_ANALYTICS_POSTGRES_USER}
+            POSTGRES_PASSWORD: ${DATABASE_ANALYTICS_POSTGRES_PASSWORD}
+            POSTGRES_DB: ${DATABASE_ANALYTICS_POSTGRES_DATABASE_NAME}
+            POSTGRES_HOST: database_analytics
+            POSTGRES_PORT: ${POSTGRES_PORT}
+            KAFKA_BROKERCONNECT: "kafka:9092"
+        networks:
+            - brokers_network
+            - database_analytics_network
+        depends_on:
+            database_analytics:
+                condition: service_healthy
+        # command: ["./ecommerce/backend_analytics/wait_for_it.sh", "database_analytics:5432", "--", "python", "create_db.py"]
     # database_users:
     #     build:
     #         dockerfile: ./ecommerce/database_users/Dockerfile
