--- a/ecommerce/backend_analytics/Dockerfile
+++ b/ecommerce/backend_analytics/Dockerfile
@@ -15,7 +15,8 @@ ARG POSTGRES_PASSWORD=$POSTGRES_PASSWORD
 ARG POSTGRES_DB=$POSTGRES_DB
 ARG POSTGRES_HOST=$POSTGRES_HOST
 
-RUN echo "$POSTGRES_USER $POSTGRES_PASSWORD $POSTGRES_DB $POSTGRES_HOST"
+ENV POSTGRES_HOST=$POSTGRES_HOST
+
 RUN python create_db.py
 
 CMD ["python", "-u", "kafka_consume.py" ]
