--- a/microservice_inventory/Dockerfile
+++ b/microservice_inventory/Dockerfile
@@ -1,5 +1,5 @@
 # Dockerfile
-FROM python:3.8-slim
+FROM python:3.10.13-slim
 
 WORKDIR /app
 
@@ -12,4 +12,4 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
-CMD ["python", "app.py"]
+CMD ["python", "backend.py"]
