--- a/microservice_inventory/Dockerfile
+++ b/microservice_inventory/Dockerfile
@@ -1,15 +1,14 @@
 # Dockerfile
 FROM python:3.10.13-slim
 
-WORKDIR /app
+ENV DATABASE_INVENTORY_POSTGRES_USER $POSTGRES_USER
+ENV DATABASE_INVENTORY_POSTGRES_PASSWORD $POSTGRES_PASSWORD
+ENV DATABASE_INVENTORY_POSTGRES_DATABASE_NAME $POSTGRES_DB
+ENV DATABASE_INVENTORY_POSTGRES_HOST $POSTGRES_HOST
 
-ENV POSTGRES_USER $POSTGRES_USER
-ENV POSTGRES_PASSWORD $POSTGRES_PASSWORD
-ENV POSTGRES_DB $POSTGRES_DB
-
-COPY requirements.txt requirements.txt
+COPY microservice_inventory/requirements.txt requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY . .
+COPY microservice_inventory /app
 
-CMD ["python", "backend.py"]
+CMD ["python", "/app/backend.py"]
