--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -105,7 +105,7 @@ services:
     microservice_inventory:
         restart: on-failure:10
         build:
-            dockerfile: ./ecommerce/microservice_inventory/Dockerfile
+            dockerfile: ./microservice_inventory/Dockerfile
             args:
                 POSTGRES_USER: ${DATABASE_INVENTORY_POSTGRES_USER}
                 POSTGRES_PASSWORD: ${DATABASE_INVENTORY_POSTGRES_PASSWORD}
@@ -126,8 +126,8 @@ services:
             - brokers_network
             - database_network
         depends_on:
-            database_analytics:
-                condition: service_healthy
+            - database_inventory
+
 
 
 
@@ -201,6 +201,12 @@ services:
             POSTGRES_DB: ${DATABASE_INVENTORY_POSTGRES_DATABASE_NAME}
         volumes:
             - ./data/database_inventory:/var/lib/database_inventory/data
+        healthcheck:
+            test: curl --fail http://localhost || exit 1
+            interval: 60s
+            retries: 5
+            start_period: 20s
+            timeout: 10s
 
     # database_inventory:
     #     build:
